--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link href="" rel="shortcut icon" type="image/x-icon"/>
-        <link href="" rel="apple-touch-icon"/>
+        <link href="imgs/ico.svg" rel="shortcut icon" type="image/x-icon"/>
+        <link href="imgs/ico.svg" rel="apple-touch-icon"/>
         
         <script type="text/javascript">
             window.__WEBFLOW_CURRENCY_SETTINGS = {
